# Rust-study

./: Cargo.toml  README.md
src/: main.rs
src/actix_api/: main.rs  mod.rs
src/actix_api/api/: api.rs
src/actix_api/repository/: database.rs
src/caderno/A linguagem de programação Rust/: 1 introdução  1.2 Olá, mundo!  1.3 Olá, Cargo!  intro
src/rust_by_pratice/: mod.rs
src/rust_by_pratice/basic_types/: char_bool_and_unit.rs  functions.rs  mod.rs  numbers.rs  statements_and_expressions.rs
src/rust_by_pratice/compound_types/: array.rs  enumm.rs  mod.rs  slice.rs  string.rs  structt.rs  tuple.rs
src/rust_by_pratice/ownership_and_borrowing/: mod.rs  ownership.rs  reference_and_borrowing.rs
src/rust_by_pratice/variables/: variables.rs
src/teste_actix/: main.rs  routes.rs
src/the_rust_programming_language/: first_word.rs  guessing_game.rs  mod.rs  rectangle.rs  test.rs
