[package]
name = "Rust-study"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
rand = { version = "0.8.5", features = [] }
serde = { version = "1.0.195", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
